# torrentProj

./: .gitignore  CMakeLists.txt  main.cpp  pluribus.torrent  test.torrent  torrent_app
PeerConnection/: peerConnection.cpp  peerConnection.hpp
PieceManager/: pieceManager.cpp  pieceManager.hpp
TrackerClient/: Tracker.cpp  Tracker.hpp
parser/: Bnode.cpp  Bnode.hpp  TorrentFile.cpp  TorrentFile.hpp  sha1.hpp
peerID/: peer.cpp  peer.hpp
